syntax = "proto3";

package user;

message User {
    int32 id = 1;
    string name = 2;
    string email = 3;
}

message CreateUserRequest {
    string name = 1;
    string email = 2;
    string password = 3;
}

message Empty {}

message GetUserRequest {
    int32 id = 1;
}

message UpdateUserRequest {
    int32 id = 1;
    User user = 2;
}

message DeleteUserRequest {
    int32 id = 1;
}

message UserResponse {
    User user = 1;
}

message UsersResponse {
    repeated User users = 1;
}

message DeleteUserResponse {
    string message = 1;
}

service UserService {
    rpc CreateUser (CreateUserRequest) returns (UserResponse) {};
    rpc GetAllUsers (Empty) returns (UsersResponse) {};
    rpc GetUser (GetUserRequest) returns (UserResponse) {};
    rpc UpdateUser (UpdateUserRequest) returns (UserResponse) {};
    rpc DeleteUser (DeleteUserRequest) returns (DeleteUserResponse) {};
}
